@@ -14,6 +14,12 @@ class SubdivisionCancelledImprovementModel
     @Caller
     def caller;
     
+
+    @Service('CancelledFAASService')
+    def cancelSvc 
+
+    String entityName = 'cancelledimprovement'
+
     def svc;
     
     def entity;
@@ -26,9 +32,13 @@ class SubdivisionCancelledImprovementModel
     def MODE_EDIT = 'edit';
     
     String title = 'Cancelled Improvements';
+
+    def getEntity() {
+        return selectedItem;
+    }
     
     void init(){
-        cancelledrpus = svc.getCancelledImprovements(entity.objid);
+        cancelledrpus = svc.getCancelledImprovements(this.entity.objid);
         listHandler?.load();
         mode = MODE_READ;
     }
@@ -42,6 +52,32 @@ class SubdivisionCancelledImprovementModel
         caller.clearMessages('cancelledimprovement');
         mode = MODE_READ;
     }
+
+
+    def getCancelReasons(){
+        return cancelSvc.getCancelReasons()
+    }
+   
+    def improvement;
+
+    def modifyCancel(){
+        if (selectedItem ){
+            improvement = [:]
+            improvement.putAll(selectedItem)
+            return new PopupOpener(outcome:'cancelinfo');
+        }
+        return null; 
+    }
+
+    
+    def doSaveCancelledImprovement(){
+        if (MsgBox.confirm('Update cancellation?')){
+            svc.updateCancelledImprovement(improvement);
+            selectedItem.putAll(improvement);
+            listHandler.refreshSelectedItem();
+            return '_close'
+        }
+    }    
     
     void undoCancel(){
         if (selectedItem && MsgBox.confirm('Undo cancellation?')){
@@ -57,9 +93,9 @@ class SubdivisionCancelledImprovementModel
     ] as BasicListModel 
             
     boolean getShowActions(){
-        if (entity.taskstate && entity.taskstate.matches('assign.*')) return false;
-        if (entity.taskstate && !entity.taskstate.matches('.*taxmapper.*')) return false;
-        if (entity.state.matches('APPROVED')) return false;
+        if (this.entity.taskstate && this.entity.taskstate.matches('assign.*')) return false;
+        if (this.entity.taskstate && !this.entity.taskstate.matches('.*taxmapper.*')) return false;
+        if (this.entity.state.matches('APPROVED')) return false;
         if (mode != MODE_READ) return false;
         return true;
     }
