@@ -56,6 +56,9 @@ class SubdivisionService
     @Service('FAASAnnotationService')
     def annotationSvc 
 
+    @Service('CancelledFAASService')
+    def cancelFaasSvc
+
 
     @DataContext('subdivision')
     def em_subdivision
@@ -72,8 +75,11 @@ class SubdivisionService
     @DataContext('faas_task')
     def em_faas_task
 
+    @DataContext('faas_signatory')
+    def em_faas_signatory
+
     @DataContext('subdivision_cancelledimprovement')
-    def cancelledimprovementDb
+    def em_cancelledimprovement
 
     @DataContext('subdivision_assist')
     def em_assist
@@ -84,6 +90,11 @@ class SubdivisionService
     @DataContext('realproperty')
     def em_realproperty
 
+    @DataContext('cancelledfaas')
+    def em_cancelledfaas
+
+    @DataContext('cancelledfaas_signatory')
+    def em_cancelledfaas_signatory
 
     @DataContext(value='dbimage_header', adapter='image')
     def em_header
@@ -170,7 +181,11 @@ class SubdivisionService
             deleteSubdividedLand(sl)
         }
 
-        cancelledimprovementDb.find([parentid:subdivision.objid]).delete()
+        em_cancelledimprovement.find([parentid:subdivision.objid]).list().each {
+            cancelFaasSvc.delete(it)
+        }
+
+        em_cancelledimprovement.find([parentid:subdivision.objid]).delete()
         
         txnRef.delete(subdivision.objid)
         em.deleteTasks(subdivision)
@@ -258,7 +273,19 @@ class SubdivisionService
     public void createCancelledImprovement(cancelledimprovement) {
         deleteAffectedRpuFaas(cancelledimprovement.arpu)
         em.delete(cancelledimprovement.arpu, 'affectedrpu')
-        cancelledimprovementDb.create(cancelledimprovement)
+        em_cancelledimprovement.create(cancelledimprovement)
+        cancelledimprovement.state = 'PENDING'
+        cancelledimprovement.originlguid = env.ORGID 
+        cancelledimprovement.faas = [objid: cancelledimprovement.faasid]
+        cancelledimprovement._options = [checkreference: false]
+        cancelledimprovement.online = false
+        cancelFaasSvc.create(cancelledimprovement)
+    }
+
+    @ProxyMethod
+    public void updateCancelledImprovement(cancelledimprovement) {
+        em_cancelledimprovement.update(cancelledimprovement)
+        cancelFaasSvc.update(cancelledimprovement)
     }
 
     @ProxyMethod
@@ -266,7 +293,8 @@ class SubdivisionService
         def arpu = em.findAffectedRpuById(cancelledimprovement)
         def subdivision = open([objid:cancelledimprovement.parentid])
         createAffectedRpu(subdivision, arpu)
-        cancelledimprovementDb.delete([objid:cancelledimprovement.objid])
+        em_cancelledimprovement.delete([objid:cancelledimprovement.objid])
+        cancelFaasSvc.delete(cancelledimprovement)
     }
 
 
@@ -843,6 +871,8 @@ class SubdivisionService
         if (cancelledimprovement.reason?.code) {
             cancelreason = cancelledimprovement.reason.code
         }
+        cancelledimprovement.faas = faas
+
         def params = [
             objid               : faas.objid,
             rpuid               : faas.rpuid, 
@@ -852,6 +882,16 @@ class SubdivisionService
             cancelledbytdnos    : cancelledbytdnos,
         ]
         faasSvc.cancelFaas(params)
+        approveCancelledImprovementFaas(cancelledimprovement)
+    }
+
+    void approveCancelledImprovementFaas(cancelledimprovement) {
+        em_cancelledfaas.find([objid: cancelledimprovement.objid]).update([state: 'APPROVED'])
+        def signatory = em_faas_signatory.find([objid: cancelledimprovement.faas.objid]).first()
+        if (signatory) {
+            em_cancelledfaas_signatory.save(signatory)
+        }
+        cancelFaasSvc.postLedgerCancellation(cancelledimprovement)
     }
 
 
